# sample-ai-coding1

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.slack_proxy_debug  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
.github/prompts/: change.prompt.md  change1.prompt.md  change2.prompt.md  change3.prompt.md  change4.prompt.md  change5.prompt.md  change6.prompt.md  change7.prompt.md  commit.prompt.md  init.prompt.md  init1.prompt.md  init2.prompt.md  init3.prompt.md  init4.prompt.md  init5.prompt.md  init6.prompt.md  init7.prompt.md  init8.prompt.md  project_change.prompt.md  project_change_phase1.prompt.md  project_change_phase2.prompt.md  project_change_phase3.prompt.md  project_change_phase4.prompt.md  project_change_phase5.prompt.md  project_change_phase6.prompt.md  project_change_phase7.prompt.md  project_init.prompt.md  project_init_phase1.prompt.md  project_init_phase2.prompt.md  project_init_phase3.prompt.md  project_init_phase4.prompt.md  project_init_phase5.prompt.md  project_init_phase6.prompt.md  project_init_phase7.prompt.md  project_init_phase8.prompt.md
cmds/: __init__.py
cmds/alert/: __init__.py  main.py
cmds/help/: __init__.py  main.py
cmds/lib/: __init__.py  utils.py
features/: persist_and_enqueue.feature.ja
features/cmds/: dummy_alert_command.feature  dummy_alert_command.feature.ja  help_command.feature  help_command.feature.ja
migrations/: env.py
spec/: ARCH_DESIGN.md  KNOWLEDGE_BASE.md  REQUIREMENTS.md  SESSION_CONTEXT.md  TODO.md
src/: config.py
tests/: conftest.py
tools/: slack_proxy_debug.py
(+124 files in other folders)
