[project]
name = "chatops"
version = "0.1.0"
description = "ChatOps Framework — Slack-triggered async command execution"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.14.0",
  "pydantic-settings>=2.0.0",
  "pymysql>=1.1.0",
  "cryptography>=42.0.0",
  "requests>=2.32.0",
  "httpx>=0.27.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
